--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body {
 }
 
 .home-color-match {
-  background-color: rgb(250 175 75);
+  background-image: url("/public/images/mainThird.jpg");
   position: relative;
 }
 
@@ -315,22 +315,41 @@ body {
 }
 
 /* home-color-match========================================= */
-.main-third-page{
-  
+.main-third-page-contents{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 50px;
 }
 
-.cotton{
-  position: absolute;
-  top: 180px;
-  left: 300px;
+.main-third-page-title{
+  font-size: 2.3em;
+  font-family: "Comfortaa", cursive;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 30px;
 }
 
-.painting{
-  position: absolute;
-  bottom: 180px;
-  right: 350px;
+.main-third-page-semiTitle{
+  font-family: "Comfortaa", cursive;
+  font-size: 4em;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 200px;
 }
 
+.colormatch-btn{
+  border: none;
+  color: white;
+  padding: 10px 15px;
+  background-color: #202124;
+}
+
+.goToPage-colormatch{
+  text-align: center;
+  color: black;
+}
 /* footer-------------------------------------------------------- */
 .footer {
   background-color: #343541;
