--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,12 @@ body {
 .home-outfit {
   background-image: url("/public/images/mainSecond.jpg");
   background-size: cover;
+  position: relative;
 }
 
 .home-color-match {
   background-image: url("/public/images/mainThird.jpg");
+  background-size: cover;
   position: relative;
 }
 
@@ -46,8 +48,8 @@ body {
   font-weight: bold;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   font-family: "Comfortaa", cursive;
-  top: 50%;
-  right: 40px;
+  top: 30%;
+  right: 30px;
 }
 
 .timeline svg {
@@ -73,6 +75,16 @@ body {
   background-color: white;
   padding: 20px 15px;
   color: rgb(163, 163, 163);
+}
+
+@media screen and (max-width:905px) {
+  .timeline{
+    width: 100px;
+  }
+  .menu{
+    display: flex;
+    flex-direction: column;
+  }
 }
 /* homeMain======================================================= */
 .homeMain {
@@ -153,7 +165,7 @@ body {
 
 .login-weather {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: flex-end;
 }
 
@@ -202,8 +214,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
-  height: 37vh;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 30px;
   color: white;
   font-weight: bold;
   animation: moveUpDown 1.5s ease-in-out infinite;
@@ -231,7 +245,7 @@ body {
 }
 
 .main-text {
-  font-size: 4.2em;
+  font-size: 4.2rem;
   font-family: "Comfortaa", cursive;
   color: white;
 }
@@ -251,9 +265,30 @@ body {
 
 .weather {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-weight: bold;
+}
+
+@media screen and (max-width: 1140px){
+  .menu a {
+    margin: 0 20px;
+    font-size: 20px;
+  }
+  .menu-bar h1 {
+    font-size: 3em;
+  }
+  .menu-bar h5 {
+    font-size: 0.8em;
+  }
+  .main-text {
+    font-size: 3em;
+  }
+  .main-contents span {
+    font-size: 1em;
+
+  }
 }
 
 /* main-second-page======================================== */
@@ -350,6 +385,49 @@ body {
   text-align: center;
   color: black;
 }
+
+/* colormatch-page==================================================== */
+.colormatch-page header{
+  background-image: url("/public/images/colormatchpage.jpg");
+  background-size: 100% auto;
+  background-position: center top;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.colormatch-page header::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: linear-gradient(to top, rgba(0,0,0,0), rgba(0,0,0,0.7));
+}
+
+/* login================================================= */
+.login-page-text{
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: center;
+  margin: 70px 30px 0 0 ;
+  font-size: 2em;
+  font-weight: bold;
+  font-family: "Comfortaa", cursive;
+  position: relative;
+}
+
+/* sign up================================================================ */
+.id-double-check{
+  display: flex;
+  justify-content: end;
+  margin-top: 16px;
+}
+
+
 /* footer-------------------------------------------------------- */
 .footer {
   background-color: #343541;
