--- a/src/App.css
+++ b/src/App.css
@@ -859,6 +859,17 @@ body {
   margin: 0px 10px;
 }
 
+.weather-text{
+  background-color: #f1f5fe;
+  border-radius: 15px;
+  display: inline-block;
+  padding: 10px 20px;
+  font-weight: bold;
+  font-size: 1.1em;
+  line-height: 35px;
+  width: 800px;
+}
+
 /* login================================================= */
 .login-page-text {
   display: flex;
