--- a/src/App.css
+++ b/src/App.css
@@ -875,6 +875,27 @@ body {
   font-weight: bold;
 }
 
+.recommended-clothes-area span{
+  font-size: 2rem;
+  font-weight: bold;
+  font-family: "Comfortaa", cursive;
+}
+
+.recommended-clothes-text-area{
+  margin-top: 30px;
+}
+
+.recommended-clothes-text{
+  font-size: 1.1rem;
+  width: 40%;
+  font-weight: bold;
+  background-color: #cfcece;
+  padding: 10px 20px;
+  border-radius: 15px;
+  margin-bottom: 30px;
+  margin-top: 8px;
+}
+
 .category-area{
   display: flex;
   flex-wrap: wrap;
@@ -882,7 +903,7 @@ body {
   text-align: center;
   font-size: 1.1rem;
   font-weight: bold;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .category-area img{
@@ -897,6 +918,18 @@ body {
   padding: 10px 20px;
   background-color: #f1f5fe;
   
+}
+
+.goTo-mycloth{
+  margin-bottom: 30px;
+  display: flex;
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #353535;
+}
+
+.goTo-mycloth div:last-child{
+  margin-left: 7px;
 }
 /* login================================================= */
 .login-page-text {
