--- a/src/App.css
+++ b/src/App.css
@@ -917,7 +917,7 @@ body {
   border-radius: 15px;
   padding: 10px 20px;
   background-color: #f1f5fe;
-  
+  margin-bottom: 30px;
 }
 
 .goTo-mycloth{
