--- a/src/App.css
+++ b/src/App.css
@@ -859,7 +859,7 @@ body {
   margin: 0px 10px;
 }
 
-.weather-text{
+.weather-text {
   background-color: #f1f5fe;
   border-radius: 15px;
   display: inline-block;
@@ -870,22 +870,22 @@ body {
   width: 800px;
 }
 /* RecommendedClothes=================================================== */
-.recommended-clothes-area h1{
+.recommended-clothes-area h1 {
   font-family: "Comfortaa", cursive;
   font-weight: bold;
 }
 
-.recommended-clothes-area span{
+.recommended-clothes-area span {
   font-size: 2rem;
   font-weight: bold;
   font-family: "Comfortaa", cursive;
 }
 
-.recommended-clothes-text-area{
+.recommended-clothes-text-area {
   margin-top: 30px;
 }
 
-.recommended-clothes-text{
+.recommended-clothes-text {
   font-size: 1.1rem;
   width: 40%;
   font-weight: bold;
@@ -896,7 +896,7 @@ body {
   margin-top: 8px;
 }
 
-.category-area{
+.category-area {
   display: flex;
   flex-wrap: wrap;
   margin-right: 30px;
@@ -906,13 +906,13 @@ body {
   margin-bottom: 30px;
 }
 
-.category-area img{
+.category-area img {
   border-radius: 15px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   margin-bottom: 10px;
 }
 
-.category{
+.category {
   margin-right: 30px;
   border-radius: 15px;
   padding: 10px 20px;
@@ -920,7 +920,7 @@ body {
   margin-bottom: 30px;
 }
 
-.goTo-mycloth{
+.goTo-mycloth {
   margin-bottom: 30px;
   display: flex;
   font-size: 1.1rem;
@@ -928,8 +928,66 @@ body {
   color: #353535;
 }
 
-.goTo-mycloth div:last-child{
+.goTo-mycloth div:last-child {
   margin-left: 7px;
+}
+
+.not-found {
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  padding: 10px 20px;
+}
+
+.recommendedOutfit-items {
+  background-color: #f1f5fe;
+  border-radius: 15px;
+  display: inline-block;
+
+  margin-left: "auto";
+  margin-right: "auto";
+  margin: 0 30px 30px 0;
+  padding: 10px 20px;
+  width: 290px;
+}
+
+.recommendedOutfit-items img {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 15px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+.recommendedOutfit-items div {
+  font-weight: bold;
+  color: #3b3b3b;
+}
+
+/* my cloth ------------------------------------------------------- */
+
+.mycloth-header {
+  background-color: #f7f6f6;
+}
+
+.mycloth-title {
+  margin: 0;
+  padding: 15px 0;
+  font-family: "Comfortaa", cursive;
+  text-align: center;
+  font-weight: bold;
+}
+
+.mycloth-header a,
+.mycloth-header button,
+.mycloth-header span {
+  color: black;
+}
+
+.mycloth-header a:hover {
+  color: black;
+  border-bottom: 3px solid black;
 }
 /* login================================================= */
 .login-page-text {
